<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormSkriningActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/main_background"/>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="6dp"
        android:src="@drawable/icon_back"
        android:translationZ="90dp"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/btn_selanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/primary_light"
        android:text="Selanjutnya"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/btn_back"
        android:layout_alignBottom="@id/btn_back"
        android:gravity="center_vertical"
        android:layout_marginRight="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Data Diri"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NIK"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txt_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pertama"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_vaksin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vaksin"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Riwayat Penyakit"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_1"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txt_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ya"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_2"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_3"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_4"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txt_pertanyaan_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_5_1"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_6"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_7"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_8"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_9"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_10"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_11"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_12"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skrining_13"
                style="@style/textSecondary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_p13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tidak Diketahui"
                style="@style/textPrimary"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>